--- a/demo-google/build.gradle
+++ b/demo-google/build.gradle
@@ -45,11 +45,11 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+	compile('org.jetbrains.kotlin:kotlin-stdlib-jdk8')
 	compile("org.jetbrains.kotlin:kotlin-reflect")
-
-	compile ("com.google.oauth-client:google-oauth-client:1.24.1")
 
 	runtime('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.mockito:mockito-core')
+	testCompile('com.nhaarman:mockito-kotlin:1.5.0')
 }
